/*===========================================================================*\
 *           MIT License Copyright (c) 2022 Kris Nóva <kris@nivenly.com>     *
 *                                                                           *
 *                ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓                *
 *                ┃   ███╗   ██╗ ██████╗ ██╗   ██╗ █████╗   ┃                *
 *                ┃   ████╗  ██║██╔═████╗██║   ██║██╔══██╗  ┃                *
 *                ┃   ██╔██╗ ██║██║██╔██║██║   ██║███████║  ┃                *
 *                ┃   ██║╚██╗██║████╔╝██║╚██╗ ██╔╝██╔══██║  ┃                *
 *                ┃   ██║ ╚████║╚██████╔╝ ╚████╔╝ ██║  ██║  ┃                *
 *                ┃   ╚═╝  ╚═══╝ ╚═════╝   ╚═══╝  ╚═╝  ╚═╝  ┃                *
 *                ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛                *
 *                                                                           *
 *                       This machine kills fascists.                        *
 *                                                                           *
\*===========================================================================*/

syntax = "proto3";

option go_package = "github.com/kris-nova/aurae/rpc";

package aurae;


service CoreService {
  rpc SetRPC (SetReq) returns (SetResp) {}
  rpc GetRPC (GetReq) returns (GetResp) {}
  rpc ListRPC (ListReq) returns (ListResp) {}
}

message SetReq {
  string key = 1;
  string val = 2;
}

message SetResp {
  int32 code = 1;
}

message GetReq {
  string key = 1;
}

message GetResp {
  string val = 1;
  int32 code = 2;
}

message ListReq {
  string key = 1;
}

message Node {
  string name = 1;
  bool file = 2;
}

message ListResp {
  map<string, Node> entries = 1;
  int32 code = 2;
}
